--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Prompt&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Caveat&display=swap");
 @import "mixin";
+@import "constants";
 
 *,
 *::before,
@@ -14,6 +15,7 @@
 html {
   font-size: 10px;
   scroll-behavior: smooth;
+  height: 100%;
 }
 
 body {
@@ -22,6 +24,7 @@ body {
   background-repeat: repeat;
   background-attachment: fixed;
   background-size: 35rem;
+  height: 100%;
 }
 
 .container {
@@ -29,6 +32,9 @@ body {
   background-color: white;
   box-shadow: 10px 10px 40px -1px rgba(0 0 0 / 23%);
   padding: 0 !important;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 #scrolTop {
@@ -39,4 +45,11 @@ body {
   right: 5rem;
   cursor: pointer;
   text-decoration: none;
+  @include media-big-desctop {
+    display: none;
+  }
+}
+
+.main {
+  flex: 1 1 auto;
 }
