--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,3 +1,5 @@
+@import "mixin";
+@import "constants";
 .header {
   position: sticky;
   top: 0;
@@ -6,15 +8,16 @@
   z-index: 9999;
   background-color: white;
   &__logo-drop {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    // display: flex;
+    // justify-content: space-between;
+    // align-items: center;
     box-shadow: 10px 10px 40px -1px rgba(0 0 0 / 23%);
   }
 
   &__logo-title {
     display: flex;
     align-items: center;
+    justify-content: space-around;
     gap: 30px;
   }
 
@@ -22,6 +25,9 @@
     display: flex;
     flex-direction: column;
     gap: 30px;
+    @include media-tablet {
+      display: none;
+    }
   }
 
   &__logo {
@@ -36,6 +42,9 @@
   &__title {
     @include font($size: 4rem, $weight: 700, $height: 1.4rem);
     @extend %font-caveat;
+    @include media-desctop-small {
+      @include font($size: 3rem, $weight: 700, $height: 2.4rem);
+    }
   }
 
   &__video-block {
@@ -62,25 +71,16 @@
     padding: 0;
   }
 
-  &__nav-link {
-    text-decoration: none;
-    @include font($size: 1.6rem, $weight: 400, $height: 1rem);
-    @extend %font-prompt;
-    color: black;
-    border-bottom: 1px dashed #079c5a;
-  }
-
-  &__nav-link:hover {
-    color: #079c5a;
-    transition: 0.2s;
-  }
-
   &__btn-block {
     display: flex;
     justify-content: space-between;
     align-items: stretch;
     gap: 20px;
     padding-right: 20px;
+    // @include media-mobile {
+    //   flex-wrap: wrap;
+    //   justify-content: center;
+    // }
   }
 
   &__link-basket {
@@ -98,12 +98,36 @@
     width: 100%;
     height: 100%;
   }
+}
 
-  &__menu-link {
-    @include font($size: 2.6rem, $weight: 600, $height: 1rem);
-    @extend %font-caveat;
-    border: none;
-  }
+.container-fluid {
+  gap: 10px;
+}
+
+.navbar-nav {
+  gap: 15px;
+}
+
+.navbar-brand {
+  @include font($size: 2rem, $weight: 400, $height: 1rem);
+  @extend %font-prompt;
+  color: black;
+}
+
+.navbar-brand:hover {
+  color: #079c5a;
+  transition: 0.2s;
+}
+
+.nav-link {
+  @include font($size: 2rem, $weight: 400, $height: 1rem);
+  @extend %font-prompt;
+  color: black;
+}
+
+.nav-link:hover {
+  color: #079c5a;
+  transition: 0.2s;
 }
 
 .btn-success {
