--- a/sass/_mixin.scss
+++ b/sass/_mixin.scss
@@ -4,3 +4,33 @@
   font-weight: $weight;
   line-height: $height;
 }
+
+@mixin media-big-desctop {
+  @media (max-width: $desctop-big-width) {
+    @content;
+  }
+}
+
+@mixin media-desctop {
+  @media (max-width: $desctop-width) {
+    @content;
+  }
+}
+
+@mixin media-desctop-small {
+  @media (max-width: $desctop-small-width) {
+    @content;
+  }
+}
+
+@mixin media-tablet {
+  @media (max-width: $desctop-tablet-width) {
+    @content;
+  }
+}
+
+@mixin media-mobile {
+  @media (max-width: $desctop-mobile-width) {
+    @content;
+  }
+}
