--- a/sass/_big-card.scss
+++ b/sass/_big-card.scss
@@ -20,12 +20,25 @@
     justify-content: center;
     align-items: center;
     gap: 30px;
+    @include media-desctop-small {
+      flex-direction: column;
+      width: 600px;
+    }
+    @include media-tablet {
+      width: 370px;
+    }
   }
 
   &__img-block {
-    width: 500px;
+    width: 50%;
     border: 0.5px solid gray;
     height: 24.5rem;
+    @include media-desctop-small {
+      width: 60%;
+    }
+    @include media-tablet {
+      width: 90%;
+    }
   }
 
   &__img-block img {
@@ -37,6 +50,9 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+    @include media-desctop-small {
+      align-items: center;
+    }
   }
 
   &__btn {
@@ -61,6 +77,9 @@
     @extend %font-prompt;
     color: gray;
     margin: 0;
+    @include media-tablet {
+      @include font($size: 1.4rem, $weight: 400, $height: 2.4rem);
+    }
   }
 
   &__price {
