--- a/sass/style.css
+++ b/sass/style.css
@@ -142,7 +142,7 @@ body {
   justify-content: space-between;
   align-items: stretch;
   gap: 20px;
-  padding: 0 20px 10px 0;
+  padding: 10px 20px 10px 0;
 }
 @media (max-width: 586px) {
   .header__btn-block {
