feat: fix adaptive

--- a/sass/style.css
+++ b/sass/style.css
@@ -623,6 +623,11 @@ h5 {
   justify-content: center;
   align-items: center;
 }
+@media (max-width: 767px) {
+  .big-card__main-container {
+    min-height: 60vh;
+  }
+}
 .big-card__card-block {
   position: absolute;
   top: 50%;
