--- a/sass/_big-card.scss
+++ b/sass/_big-card.scss
@@ -8,6 +8,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    @include media-tablet {
+      min-height: 60vh;
+    }
   }
 
   &__card-block {
