--- a/sass/_big-card.scss
+++ b/sass/_big-card.scss
@@ -8,8 +8,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    @include media-tablet {
-      min-height: 80vh;
+    @include media-mobile {
+      min-height: 100vh;
     }
   }
 
