--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -36,6 +36,9 @@
   &__logo {
     padding: 20px 0 20px 20px;
     width: 150px;
+    @include media-mobile {
+      width: 100px;
+    }
   }
 
   &__logo img {
@@ -81,13 +84,9 @@
     gap: 20px;
     padding: 10px 20px 10px 0;
     @include media-mobile {
-      flex-wrap: wrap;
-      justify-content: end;
+      padding: 10px 5px 10px 0;
+      gap: 8px;
     }
-  }
-
-  &__btn-menu {
-    flex-wrap: wrap;
   }
 
   &__link-basket {
@@ -102,6 +101,9 @@
   &__basket {
     width: 20px;
     height: 20px;
+    @include media-mobile {
+      display: none;
+    }
   }
 
   &__basket img {
