--- a/sass/style.css
+++ b/sass/style.css
@@ -54,7 +54,7 @@ body {
   flex: 1 1 auto;
 }
 
-.footer__stroke, .footer__text, .big-card__price, .big-card__compound-text, .big-card__desc-text, .about__info-text, .about__text, .card-text, .btn-success, .nav-link, .navbar-brand {
+.footer__stroke, .footer__text, .big-card__number, .big-card__max, .big-card__label, .big-card__souce-text, .big-card__price, .big-card__compound-text, .big-card__desc-text, .about__info-text, .about__text, .card-text, .cards__sum, .btn-success, .nav-link, .navbar-brand {
   font-family: "Prompt", sans-serif;
 }
 
@@ -97,6 +97,11 @@ body {
 .header__logo {
   padding: 20px 0 20px 20px;
   width: 150px;
+}
+@media (max-width: 586px) {
+  .header__logo {
+    width: 100px;
+  }
 }
 .header__logo img {
   width: 100%;
@@ -146,12 +151,9 @@ body {
 }
 @media (max-width: 586px) {
   .header__btn-block {
-    flex-wrap: wrap;
-    justify-content: end;
+    padding: 10px 5px 10px 0;
+    gap: 8px;
   }
-}
-.header__btn-menu {
-  flex-wrap: wrap;
 }
 .header__link-basket {
   display: flex;
@@ -161,6 +163,11 @@ body {
 .header__basket {
   width: 20px;
   height: 20px;
+}
+@media (max-width: 586px) {
+  .header__basket {
+    display: none;
+  }
 }
 .header__basket img {
   width: 100%;
@@ -243,7 +250,7 @@ body {
   flex-direction: column;
 }
 .cards__filter {
-  width: 170px;
+  width: 180px;
   padding: 20px;
   border: 1px solid #079c5a;
   border-radius: 5px;
@@ -320,15 +327,33 @@ body {
     padding: 10px !important;
   }
 }
+.cards__price-sum {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+.cards__sum {
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1rem;
+  margin: 0;
+}
 
 .row {
   gap: 30px;
 }
 
 .card {
-  min-width: 270px;
+  height: 400px;
+  width: 290px;
   overflow: hidden;
   cursor: pointer;
+  justify-content: space-between;
+}
+
+.card-body {
+  flex: 0 1 auto;
 }
 
 .card-title {
@@ -351,14 +376,18 @@ body {
   background-color: #079c5a;
 }
 
+.card-img-top-block {
+  overflow: hidden;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 .card-img-top {
+  width: 100%;
+  height: 100%;
   cursor: pointer;
   transition: transform 0.3s ease-in-out;
   transform-origin: center;
-}
-
-.card:hover .card-img-top {
-  transform: scale(1.5);
 }
 
 .pagination {
@@ -366,8 +395,8 @@ body {
 }
 
 .pagination .page-link {
-  color: #079c5a;
-  font-size: 2rem;
+  color: black;
+  font-size: 1.6rem;
   font-style: normal;
   font-weight: 400;
   line-height: 2.5rem;
@@ -578,14 +607,20 @@ h5 {
 }
 
 .filter-menu__link {
-  display: flex;
-  justify-content: center;
+  display: block;
   position: relative;
   border-radius: 5px;
   border: 1px solid #eee;
   box-shadow: 0 0 15px 0 #eee;
   transition: box-shadow 0.3s ease-in-out;
   text-decoration: none;
+  width: 300px;
+  height: 300px;
+  overflow: hidden;
+}
+.filter-menu__link img {
+  width: 100%;
+  height: 100%;
 }
 .filter-menu__link:hover {
   box-shadow: 0 0 15px 0 #ccc;
@@ -599,6 +634,7 @@ h5 {
   font-weight: 700;
   line-height: 1.4rem;
   color: black;
+  margin: 0;
 }
 
 .row {
@@ -610,6 +646,9 @@ h5 {
     margin: 0;
   }
 }
+.row .col {
+  display: flex;
+}
 
 .big-card {
   display: flex;
@@ -617,22 +656,12 @@ h5 {
   align-items: center;
 }
 .big-card__main-container {
-  position: relative;
-  min-height: 50vh;
   display: flex;
   justify-content: center;
   align-items: center;
-}
-@media (max-width: 586px) {
-  .big-card__main-container {
-    min-height: 80vh;
-  }
+  padding: 115px 0;
 }
 .big-card__card-block {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   width: 900px;
   display: flex;
   justify-content: center;
@@ -720,6 +749,65 @@ h5 {
   line-height: 2.4rem;
   margin: 0;
 }
+.big-card__souce-text {
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 2.4rem;
+  margin: 0;
+}
+.big-card__form {
+  display: flex;
+  gap: 10px;
+}
+.big-card__label {
+  font-size: 1.7rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 2.4rem;
+}
+.big-card__max {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  border: none;
+  cursor: pointer;
+  font-size: 2.1rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 2.4rem;
+  outline: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.big-card__quantity-controller {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.big-card__green {
+  background-color: #079c5a;
+}
+.big-card__green:hover {
+  background-color: #146c43;
+  transition: 0.3s;
+}
+.big-card__dark:hover {
+  background-color: gray;
+  transition: 0.3s;
+}
+.big-card__price-quantity-block {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.big-card__number {
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1rem;
+}
 
 .big-card__img {
   cursor: all-scroll;
@@ -732,6 +820,31 @@ h5 {
 
 .big-card__img-block:hover .big-card__img {
   transform: scale(1.5);
+}
+
+.label.selected {
+  color: #079c5a;
+}
+
+.radio {
+  display: none;
+}
+
+.radio-custom {
+  content: "";
+  display: inline-block;
+  width: 18px;
+  height: 18px;
+  border: 5px solid gray;
+  background-color: white;
+  border-radius: 50%;
+  vertical-align: middle;
+  cursor: pointer;
+}
+
+.radio:checked + .radio-custom {
+  border-color: #079c5a;
+  box-shadow: 0 1px 1px rgba(255, 198, 5, 0.05), 0 2px 2px rgba(255, 198, 5, 0.05), 0 4px 4px rgba(255, 198, 5, 0.05), 0 8px 8px rgba(255, 198, 5, 0.05), 0 16px 16px rgba(255, 198, 5, 0.05), 0 32px 32px rgba(255, 198, 5, 0.05), 0 -2px 4px rgba(255, 198, 5, 0.05);
 }
 
 .footer {
