--- a/sass/_cards.scss
+++ b/sass/_cards.scss
@@ -24,7 +24,7 @@
   }
 
   &__filter {
-    width: 170px;
+    width: 180px;
     padding: 20px;
     border: 1px solid #079c5a;
     border-radius: 5px;
@@ -99,6 +99,18 @@
       padding: 10px !important;
     }
   }
+
+  &__price-sum {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+  }
+
+  &__sum {
+    @include font($size: 1.5rem, $weight: 400, $height: 1rem);
+    @extend %font-prompt;
+    margin: 0;
+  }
 }
 
 .row {
@@ -106,9 +118,15 @@
 }
 
 .card {
-  min-width: 270px;
+  height: 400px;
+  width: 290px;
   overflow: hidden;
   cursor: pointer;
+  justify-content: space-between;
+}
+
+.card-body {
+  flex: 0 1 auto;
 }
 
 .card-title {
@@ -127,23 +145,30 @@
   background-color: #079c5a;
 }
 
+.card-img-top-block {
+  overflow: hidden;
+  object-fit: cover;
+}
+
 .card-img-top {
+  width: 100%;
+  height: 100%;
   cursor: pointer;
   transition: transform 0.3s ease-in-out;
   transform-origin: center;
 }
 
-.card:hover .card-img-top {
-  transform: scale(1.5);
-}
+// .card:hover .card-img-top {
+//   transform: scale(1.5);
+// }
 
 .pagination {
   justify-content: center;
 }
 
 .pagination .page-link {
-  color: #079c5a;
-  @include font($size: 2rem, $weight: 400, $height: 2.5rem);
+  color: black;
+  @include font($size: 1.6rem, $weight: 400, $height: 2.5rem);
 }
 
 .pagination .page-item.active .page-link {
