--- a/sass/_filter-menu.scss
+++ b/sass/_filter-menu.scss
@@ -1,13 +1,20 @@
 .filter-menu {
   &__link {
-    display: flex;
-    justify-content: center;
+    display: block;
     position: relative;
     border-radius: 5px;
     border: 1px solid #eee;
     box-shadow: 0 0 15px 0 #eee;
     transition: box-shadow 0.3s ease-in-out;
     text-decoration: none;
+    width: 300px;
+    height: 300px;
+    overflow: hidden;
+  }
+
+  &__link img {
+    width: 100%;
+    height: 100%;
   }
 
   &__link:hover {
@@ -20,6 +27,7 @@
     bottom: 7%;
     @include font($size: 2.5rem, $weight: 700, $height: 1.4rem);
     color: black;
+    margin: 0;
   }
 }
 
@@ -28,5 +36,9 @@
   align-items: center;
   @include media-mobile {
     margin: 0;
+  }
+
+  .col {
+    display: flex;
   }
 }
